tests/fixtures/invalid/dict_in_int.py
# Cannot use 'in' with Dict[str, int] and Int
x: bool = {"a": 1} in 1
